vlib/v/scanner/tests/unfinished_string_literal_err.vv
// something
a := 'abc'
println(a)
x := 'asdka

zzzz
